...
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/uren"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_uren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:background="@color/grey"
                        android:ems="8"
                        android:gravity="center"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_rda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <nl.emconsult.wbso2018.layoutElement.MyTextView
...
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/kosten"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_kosten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:background="@color/grey"
                        android:ems="8"
                        android:gravity="center"
...
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/uitgaven"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_uitgaven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:background="@color/grey"
                        android:ems="8"
                        android:gravity="center"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="400dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/em_blue"
                        android:scrollbars="none"
...
