...
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="Kies een jaargang om te beginnen"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_2020"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/em_blue"
            android:text="2020"
            android:textColor="@color/white" />
...
            android:layout_marginBottom="12dp"
            android:background="@color/em_blue"
            android:text="2018"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_2017"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/em_blue"
            android:text="2017"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_2016"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/em_blue"
            android:text="2016"
            android:textColor="@color/white" />

    </LinearLayout>

    <include layout = "@layout/fragment_footer" />

...
